--- a/src/components/Article.astro
+++ b/src/components/Article.astro
@@ -16,10 +16,10 @@ const translatedHref = "/articles/" + href.split("/")[3]
 <li class="article">
 	<div>
 		
-		<h2><a href={translatedHref}>{title}</a></h2>
+		<h2><a href={translatedHref} set:html={title}></a></h2>
 	</div>
 	<div class="article-info">
-		<span>{author}</span> <span>{date}</span>
+		<span>{author}</span> <span>{new Date(date).toLocaleString("cs-CZ")}</span>
 	</div>
 	<div class="article-content"> <span set:html={body.replace(/[\[&#8230;\]]/g, "")}></span> {body.includes("[&#8230;]") ? (<a href={translatedHref}>...</a>) : ""}</div>
 </li>
