--- a/src/pages/novinky.astro
+++ b/src/pages/novinky.astro
@@ -3,16 +3,22 @@ import Layout from "../layouts/Layout.astro";
 import Article from "../components/Article.astro";
 import { getFeed } from "./api/feed";
 
-const articles = await getFeed(true)
-
+const articles = await getFeed(true);
 ---
 
 <Layout title="Novinky | FastGymlit">
 	<main>
 		<div class="articles">
 			{
-				articles.map((article:any) => (
-					<Article title={article.title} href={article.link} author={article["dc:creator"]} date={article.pubDate} body={article.description}></Article>
+				articles.map((article: any) => (
+					<Article
+						title={article.title}
+						href={article.link}
+						author={article["dc:creator"]}
+						date={article.pubDate}
+						body={article["content:encoded"]}
+						description={article.description}
+					/>
 				))
 			}
 		</div>
