--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,9 +1,10 @@
 ---
 export interface Props {
 	title: string;
+	noShout?: boolean;
 }
 
-const { title } = Astro.props;
+const { title, noShout} = Astro.props;
 ---
 
 <!DOCTYPE html>
@@ -17,7 +18,7 @@ const { title } = Astro.props;
 	</head>
 	<body>
 		<header class="dark">
-			<h1 set:html={title} />
+			<h1 title={noShout?"Titulek předělaný, aby učitel nepoužíval jen capslock (může obsahovat chyby)":"Titulek článku"} set:html={title} />
 			<nav>
 				<a href="/" id="nav-home" title="Hlavní stránka"
 					>Hlavní stránka</a
@@ -36,13 +37,14 @@ const { title } = Astro.props;
 				<a
 					href="https://www.youtube.com/@TVGymlitPrague"
 					id="nav-tv"
-					title="TV Gymlit">TV Gymlit</a
+					title="TV Gymlit">TV</a
 				>
 				<a
 					href="https://skola.tritius.cz/library/gymlit"
 					id="nav-lib"
 					title="Knihovna">Knihovna</a
 				>
+				<a href="/info" id="nav-info" title="Informace o stránce">Info</a>
 			</nav>
 		</header>
 		<slot />
@@ -66,6 +68,10 @@ const { title } = Astro.props;
 	a {
 		color: var(--font-color);
 		text-decoration-color: orange;
+	}
+
+	code {
+		font-family: 'Courier New', Courier, monospace;
 	}
 
 	body {
@@ -167,8 +173,8 @@ const { title } = Astro.props;
 		}
 
 		body {
-			width: max-content;
-			height: max-content;
+			width: fit-content;
+			height: fit-content;
 		}
 	}
 
@@ -196,6 +202,10 @@ const { title } = Astro.props;
 		background-image: url("/icons/book.svg");
 	}
 
+	#nav-info::before {
+		background-image: url("/icons/info.svg");
+	}
+
 	@media (min-width: 1500px) {
 		header {
 			width: 100%;
@@ -216,7 +226,7 @@ const { title } = Astro.props;
 	}
 
 	img {
-		max-width: 80%;
+		max-width: 80vw;
 		height: auto;
 	}
 </style>
