--- a/src/pages/info.astro
+++ b/src/pages/info.astro
@@ -115,6 +115,7 @@ import Layout from "../layouts/Layout.astro";
                 <img src="/info/zjednodus1.png" alt="Text je zarovaný doleva">
             </div>
         </div>
+        <div>To není zdaleka vše. Tato stránka je open-source a to na <a href="https://github.com/PanJohnny/FastGymlit">https://github.com/PanJohnny/FastGymlit</a></div>
     </main>
 </Layout>
 
