--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,6 +2,7 @@
 import Layout from "../layouts/Layout.astro";
 import { Category } from "./api/feed";
 import Articles from "../components/Articles.astro";
+import Article from "../components/Article.astro";
 ---
 
 <Layout title="Domov | FastGymlit">
