žádné externí odkazy v nav baru a bugy

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -36,15 +36,11 @@ const { title, noShout } = Astro.props;
 					id="nav-accomplishments"
 					title="Úspěchy školy"></a>
 				<a
-					href="https://bakalari.gymlit.cz"
-					id="nav-baka"
-					title="Bakaláři"></a>
-				<a
-					href="https://www.strava.cz/strava5/Jidelnicky?zarizeni=0837&Tisk=true"
+					href="/jidelnicek"
 					id="nav-food"
 					title="Jídelníček"></a>
 				<a
-					href="https://skola.tritius.cz/library/gymlit"
+					href="/knihovna"
 					id="nav-lib"
 					title="Knihovna"></a>
 				<a href="/info" id="nav-info" title="Informace o stránce"></a>
