--- a/src/components/Article.astro
+++ b/src/components/Article.astro
@@ -83,7 +83,7 @@ if (title.toUpperCase() == title) {
 		<h2><a href={translatedHref} title={noShout?"Titulek předělaný, aby učitel nepoužíval jen capslock (může obsahovat chyby)":"Titulek článku"} set:html={noShout ? noShoutTitle : title}></a></h2>
 	</div>
 	<div class="article-info">
-		<span title={titleAuthor}>{shouldMaybeShowNewAuthor ? authorMaybe : author.replace("Administ", "Ředitelství")}</span> <span>{new Date(date).toLocaleString("cs-CZ")}</span>
+		<span title={titleAuthor}>{shouldMaybeShowNewAuthor ? authorMaybe : author.replace("Administ", "Ředitelství")}</span> <span>{new Date(date).toLocaleDateString("cs-CZ")}</span>
 	</div>
 	<div class="article-content"><span set:html={description.replace(/[\[&#8230;\]]/g, "")}></span>{description.includes("[&#8230;]") ? (<a href={translatedHref}>...</a>) : ""}</div>
 </article>
